@@ -1,3 +1,5 @@
+* Remove lingering Fuse.Array#clone dependency from the Fuse.Array#grep addition. [jddalton]
+
 * Fix leaked variable `name` that caused TaskSpeed to error in WebKit based browsers. [Diego Perini]
 
 * Refactor codebase to reduce file dependencies and allow more custom build variations. [jddalton]
